# qt-model-viewer

./: .gitignore  CMakeLists.txt  README.adoc  build.sh  resource.qrc  run.sh
examples/: cube_02.mtl  cube_03.mtl  cube_03_map.xcf  materials.mtl
examples/oyonale.com/: README.txt  chair.mtl  textures.mtl
lib/: CMakeLists.txt
lib/inc/: ec_base32.h  ec_base64.h  ec_core.h  ec_vector.h
lib/src/: application.cpp  base32.cpp  base64.cpp  clock.cpp  exception.cpp  shared_library.cpp
main/: CMakeLists.txt
main/inc/: gl_model.h  graphics_view.h  main_window.h  material_dialog.h  resource.h  scene.h
main/src/: geometry.cpp  gl_model.cpp  graphics_view.cpp  main.cpp  main_window.cpp  material_dialog.cpp  parser.cpp  rendering.cpp  resource.cpp  scene.cpp  terrain.cpp
resources/forms/: material.ui  model.ui
